@@ -3,7 +3,8 @@
    * Support for the iTunes non-standard TSO2 and TSOC frames.
    * Fix a bug in ID3v2.4 footer flag detection, (#5)
  * EasyID3: Extension API for defining new "easy" tags at runtime.
- * mutagen.File: New 'easy=True' argument to create new EasyMP3,
+ * EasyMP4: Like EasyID3, but for iTunes MPEG-4 files.
+ * mutagen.File: New 'easy=True' argument to create new EasyMP3, EasyMP4,
    EasyTrueAudio, and EasyID3FileType instances.
 
 1.16 - 2009.06.15
